# ising-model

./: .gitignore  CMakeLists.txt  README.md  fetch-pybind11.cmake
cpp/: CMakeLists.txt  base.cpp  base.h  ising-model.cpp  main.cpp  metropolis-hasting.cpp  metropolis-hasting.h
python/: Results.ipynb  animated_histogram.ipynb  autocovariance-M10.ipynb  autocovariance-M32.ipynb  autocovariance-M4.ipynb  autocovariance-M64.ipynb  dratf.py  heat-capacity-analysis-stan.ipynb  heat-capacity-analysis.ipynb  heat-capacity.ipynb  magnetization-vs-T with H.ipynb  magnetization-vs-T.ipynb  parallel.py  relaxation-time.ipynb  susceptibility analysis.ipynb  susceptibility from hysteresis.ipynb  susceptibility.ipynb  test.ipynb  utils.py
python/dumps/: heat-capac-4-44-help.pkl
